fixed editing egg name on mobile

--- a/bugs/client/gameApp/src/view/panel/tabs/coloniesTab/colonyManager/nestsTab/nestManager/styles.css
+++ b/bugs/client/gameApp/src/view/panel/tabs/coloniesTab/colonyManager/nestsTab/nestManager/styles.css
@@ -30,7 +30,7 @@
 }
 
 .nest-manager__eggs-list-actions-col {
-    width: 120px;
+    width: 110px;
 }
 
 .nest-manager__eggs-list-state-col {
@@ -75,7 +75,7 @@
 }
 
 .nest-manager__larvae-list-actions-col {
-    width: 120px;
+    width: 110px;
 }
 
 .nest-manager__larvae-list-progress-col {
